# telectl

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  backfill_image_memories.py  bot.py  codex_llm.py  codex_poc.py  fuel_tracker.py  http_intake.py  image_summary.py  link_enrichment.py  memory_processor.py  metrics.py  pdf_memory.py  poi_memory.py  prometheus-alerts.yml  pyproject.toml  spending_index.py  usage_analytics.py
dashboards/grafana/: telegram-control.json
docs/: ocr-memory-code-flow.md
owntracks/: __init__.py  digest.py  env.py  listener.py  place_resolver.py  search_aliases.py  tagger.py  telegram_send.py
scripts/: backup_to_dietpi.sh
systemd/: my-owntracks-digest.service  my-owntracks-digest.timer  my-owntracks-listener.service  my-owntracks-search-aliases.service  my-owntracks-search-aliases.timer  telegram-control-backup.service  telegram-control-backup.timer  telegram-control.service
tests/: test_caption_pairing.py  test_codex_llm.py  test_fuel_tracker.py  test_http_intake.py  test_image_memory.py  test_link_enrichment.py  test_memory_processor.py  test_memory_query_feedback.py  test_owntracks_fixture_regressions.py  test_owntracks_heatmap_animation.py  test_owntracks_listener.py  test_owntracks_place_resolver.py  test_owntracks_search_aliases.py  test_owntracks_stop_jitter.py  test_pdf_memory.py  test_poi_memory.py  test_spending_index.py  test_usage_analytics.py
tests/fixtures/owntracks/: significant_mode_jitter.jsonl
