[project]
name = "telegram-control"
version = "0.1.0"
description = "Telegram bot for restarting codex remote-control from a configured topic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-codex>=0.1.0b3",
    "python-telegram-bot==22.1",
    "requests>=2.31.0",
]

[tool.uv]
package = false
