[project]
name = "telegram-control"
version = "0.1.0"
description = "Telegram bot for restarting codex remote-control from a configured topic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-codex>=0.1.0b3",
    "prometheus-client>=0.22.0",
    "python-telegram-bot==22.1",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
